about page sections spacing fix

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10335,10 +10335,10 @@ nav ul li {
     margin-left: 0px; } }
 
 .quote {
-  margin-bottom: 100px; }
+  margin: 100px 0px; }
   @media screen and (max-width: 550px) {
     .quote {
-      margin-bottom: 80px; } }
+      margin: 80px 0px; } }
   .quote blockquote {
     font-size: 2.5vw;
     line-height: 3.1vw;
@@ -10404,10 +10404,15 @@ nav ul li {
   @media screen and (max-width: 550px) {
     .questions__answer {
       padding-top: 15px; } }
-  .questions__answer:last-of-type p:last-of-type {
-    border-bottom: none;
-    padding-bottom: 0px;
-    margin-bottom: 0px; }
+  .questions__answer:last-of-type {
+    padding-bottom: 100px; }
+    @media screen and (max-width: 550px) {
+      .questions__answer:last-of-type {
+        padding-bottom: 80px; } }
+    .questions__answer:last-of-type p:last-of-type {
+      border-bottom: none;
+      padding-bottom: 0px;
+      margin-bottom: 0px; }
   .questions__answer p {
     font-size: 18px;
     line-height: 25px;
@@ -10535,12 +10540,10 @@ nav ul li {
         display: none; } }
 
 .events-text {
-  margin-top: 100px;
-  margin-bottom: -20px; }
+  margin: 100px 0px; }
   @media screen and (max-width: 900px) {
     .events-text {
-      margin-top: 25px;
-      margin-bottom: -10px; } }
+      margin: 25px 0px; } }
   .events-text p {
     color: #D1D1D1;
     line-height: 23px; }
