--- a/app/scss/layouts/_about.scss
+++ b/app/scss/layouts/_about.scss
@@ -231,10 +231,10 @@
 	}
 }
 .quote {
-    margin-bottom: 100px;
+    margin: 100px 0px;
 
     @media screen and (max-width: $small) {
-        margin-bottom: 80px;
+        margin: 80px 0px;
     }
     blockquote {
         font-size: 2.5vw;
@@ -314,6 +314,11 @@
             padding-top: 15px;
         }
         &:last-of-type {
+            padding-bottom: 100px;
+
+            @media screen and (max-width: $small) {
+                padding-bottom: 80px;
+            }
             p {
                 &:last-of-type {
                     border-bottom: none;
@@ -481,12 +486,10 @@
     }
 }
 .events-text {
-    margin-top: 100px;
-    margin-bottom: -20px;
+    margin: 100px 0px;
 
     @media screen and (max-width: $medium) {
-        margin-top: 25px;
-        margin-bottom: -10px;
+        margin: 25px 0px;
     }
     p {
         color: $light-gray;
